0.2.3
-----
1. Fix add/edit alarm dialog not showing.
2. Fix queue background cover not being drawn initially on mobile.
3. Check for metadata, and cover, changes for current track in queue if it is a
   radio stream (0 duration).

0.2.2
-----
 1. Fix cover display when re-ordering favourites.
 2. Fix renmaming and deleting favourites.
 3. Use curent cover as queue background.
 4. Use curent artist, album, etc. image as browse background.
 5. When adding/playing a selection, call commands sequentially and wait for
    each to complete before doing the next.
 6. Revert cover change, and use artwork_url/coverid if supplied.
 7. Re-add option to sort favourites, disables drag'n'drop ordering.
 8. Add button to save default UI settings, and pinned items, on server.
 9. Re-add swipe to change view.
10. Fix error when browsing apps and there are none.
11. Remove 'More' menu option from years.
12. Fix pinned apps breaking browse view.

0.2.1
-----
 1. Fix plugin update check.
 2. Remove track/queue duration sleep timers, and replace with option to use
    remaining duration of current track.
 3. Remove swipe to change views; buggy, and material apps don't do this.
 4. Fix deleting playlists.
 5. Center crop background image in mobile now playing info.
 6. Don't add play actions to toolbar for track/album/atist info.
 7. Fix buttons in fullscreen image view.
 8. Remove option to sort favourites, instead allow drag'n'drop re-ordering.
 9. Don't allow pining of favourites  - their IDs seem to change too, and
    why pin a favourite directly?
10. Always use player's current cover image for now playing.
11. Use album artist for album review.
12. Fix player menu in manage players dialog not always showing.

0.2.0
-----
 1. Fix swipe to change views not working after show Information dialog.
 2. Add ellipsis to main toolbar text.
 3. Fix scrollbar initialisation.
 4. Place group players first in drop down menu and in Manage Players dialog.